Fixed broken styles in Calendar layout (#10944)

--- a/public_html/layouts/basic/styles/libraries/_Quasar.scss
+++ b/public_html/layouts/basic/styles/libraries/_Quasar.scss
@@ -7,7 +7,7 @@
 	}
 
 	.col,
-	[class*='col-'] {
+	[class*="col-"] {
 		position: unset;
 		padding: unset;
 		padding-right: unset;
